create ui container

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,38 @@
+:root {
+  --color-scale-gray-0: #f0f6fc;
+  --color-scale-gray-1: #c9d1d9;
+  --color-scale-gray-2: #b1bac4;
+  --color-scale-gray-3: #8b949e;
+  --color-scale-gray-4: #6e7681;
+  --color-scale-gray-5: #484f58;
+  --color-scale-gray-6: #30363d;
+  --color-scale-gray-7: #21262d;
+  --color-scale-gray-8: #161b22;
+  --color-scale-gray-9: #0d1117;
+
+  --color-scale-blue-0: #cae8ff;
+  --color-scale-blue-1: #a5d6ff;
+  --color-scale-blue-2: #79c0ff;
+  --color-scale-blue-3: #58a6ff;
+  --color-scale-blue-4: #388bfd;
+  --color-scale-blue-5: #1f6feb;
+  --color-scale-blue-6: #1158c7;
+  --color-scale-blue-7: #0d419d;
+  --color-scale-blue-8: #0c2d6b;
+  --color-scale-blue-9: #051d4d;
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  line-height: 1.6;
+  font-size: 62.5%;
+  background-color: var(--color-scale-gray-8);
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0;
+  padding: 0;
 }
