--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .App {
-    width: 50%;
+    width: 40%;
     margin: auto;
 
     & > .Search_form {
@@ -15,7 +15,7 @@
 
 
     & > input {
-        width: 90%;
+        width: 80%;
         padding: 1rem;
         outline: none;
         border: 1px solid var(--color-scale-gray-0);
@@ -25,7 +25,7 @@
     }
 
     & > button {
-        width: 10%;
+        width: 20%;
         outline: none;
         border: 1px solid #ccc;
         color: #fff;
@@ -62,6 +62,18 @@
     }
 }
 
+.Filter {
+    margin-top: 1rem;
+    & > select {
+        padding: .5rem 1rem;
+        outline: none;
+        border: none;
+        background-color: var(--color-scale-gray-3);
+        font-size: 1.1rem;
+        border-radius: .7rem;
+    }
+}
+
 .Repositories {
     list-style: none;
     margin: 0;
@@ -69,7 +81,7 @@
     margin-top: 1rem;
     
 
-    &_item{
+    &_item {
 
       background-color: var(--color-scale-gray-7);
       border-radius: .7rem ;
