--- a/src/components/Repositories/Repositories.scss
+++ b/src/components/Repositories/Repositories.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     
 
     &_item {
@@ -14,7 +15,7 @@
       padding: 1rem;
 
       & > h3 {
-          font-size: 2.3rem;
+          font-size: 2rem;
           color: var(--color-scale-gray-1);
       }
 
@@ -43,13 +44,15 @@
         display: flex;
         margin-top: 2rem;
 
-        & > .language, & > .updated_at {
+        & > .language, & > .updated_at, & > .created_at {
             font-size: 1.1rem;
             color: var(--color-scale-gray-1);
         }
         & > .language {
             margin-right: 1.4rem;
         }
+
+        
       }
 
       &:not(:last-child) {
